--- a/src/ui/internal-audit/src/app/views/private/branch-audit/issue-list/issue-list.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/issue-list/issue-list.component.html
@@ -36,7 +36,7 @@
                         <th>Issue Title</th>
                         <th>Issue Owner</th>
                         <th>Issue Rating</th>
-                        <th>Action Owner</th>
+                        <!-- <th>Action Owner</th> -->
                         <th>Issue Traget Date</th>  
                         <th>Status</th>  
                         <th class="col-1 text-center">Actions</th>                   
@@ -48,7 +48,7 @@
                         <td>{{ issue.issueTitle }}</td>
                         <td>{{ issue.issueOwners }}</td>
                         <td>{{ issue.ratingType }}</td>
-                        <td>{{ issue.actionOwners }}</td>
+                        <!-- <td>{{ issue.actionOwners }}</td> -->
                         <td>{{ issue.targetDate | date:'medium' }}</td>
                         <td>{{ issue.statusType }}</td>
                         <td class="text-center">
