issue view page and functionality

--- a/src/ui/internal-audit/src/app/views/private/branch-audit/issue-list/issue-list.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/issue-list/issue-list.component.html
@@ -44,7 +44,7 @@
                     </thead>                  
                     <tbody *ngIf="issues?.length != 0">
                       <tr *ngFor="let issue of issues">
-                        <td>{{ issue.code }}</td>
+                        <td><a [routerLink]="['/branch-audit/issue-view',issue.id]">{{ issue.code }}</a></td>
                         <td>{{ issue.issueTitle }}</td>
                         <td>{{ issue.issueOwners }}</td>
                         <td>{{ issue.ratingType }}</td>
