--- a/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/new-issue/new-issue.component.html
@@ -274,7 +274,7 @@
         </div>
       </div>
     </c-tab-pane>
-    <c-tab-pane class="p-3" id="d22">
+    <c-tab-pane class="p-3">
       <div class="animated fadeIn">
         <div class="row">
          <div class="col-lg-12">
