--- a/src/ui/internal-audit/src/app/views/private/branch-audit/issue-view/issue-view.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/issue-view/issue-view.component.html
@@ -218,12 +218,12 @@
                         <td>{{row.managementPlan}}</td>
                         <td>{{row.issueActionPlanOwners}}</td>
                         <td>{{row.targetDate | date: 'yyyy-MM-dd'}}</td>
-                        <td>Evidence</td>
+                        <td>{{row.evidenceDocumentId}}</td>
                         <td>{{row.actionTakenRemarks}}</td>
                         <td class="text-center">
                           <div >
                             <!-- <svg cIcon [name]="cil-airplane-mode" [title]="cil-airplane-mode" size="3xl">gjhj</svg> -->
-                            <button type="button" class="btn btn-secondary btnEditColor" [cModalToggle]="actionTakenModal.id">
+                            <button type="button" class="btn btn-secondary btnEditColor" [cModalToggle]="actionTakenModal.id" (click)="onClickActionTaken(row.id)">
                               Action Taken
                             </button>                            
                           </div>
@@ -242,8 +242,8 @@
            </div>
           </div>
         </div>
-        <form [formGroup]="actionTakenForm" (ngSubmit)="onSubmitStatusChange(actionTakenModal)" novalidate>
-          <c-modal #actionTakenModal alignment="center" id="changeStatusModal">
+        <form [formGroup]="actionTakenForm" (ngSubmit)="onSubmitActionTaken(actionTakenModal)" novalidate>
+          <c-modal #actionTakenModal alignment="center" id="actionTakenModal">
             <c-modal-header>
               <h5 cModalTitle>Action Taken</h5>
               <!-- <h5 cModalTitle *ngIf="!formService.isEdit(this.topicHeadForm.get('id'))">Create Topic Head</h5>
@@ -255,7 +255,7 @@
                 <input type="hidden" formControlName="id"/>
                 <div class="form-floating mb-3">
                   <input type="date" class="form-control" formControlName="actionTakenDate" id="actionTakenDate" placeholder="actionTakenDate">
-                  <label for="floatingInput">Date</label>
+                  <label for="floatingInput">Action Taken Date</label>
                   <div cRow *ngIf="actionTakenForm.get('actionTakenDate')?.invalid && actionTakenForm.get('actionTakenDate')?.errors &&
                         (actionTakenForm.get('actionTakenDate')?.dirty || actionTakenForm.get('actionTakenDate')?.touched)">
                     <small class="text-danger"
@@ -295,7 +295,7 @@
               </div>
             </c-modal-body>
             <c-modal-footer>
-              <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmitStatusChange(changeStatusModal)">
+              <button cButton class="btn btn-primary btnSaveColor me-1" (click)="onSubmitActionTaken(actionTakenModal)">
                 <svg cIcon name="cilSave" size="md" title="Save Button Icon"></svg> Save
               </button>
               <!-- <button [cModalToggle]="verticallyCenteredModal.id" cButton class="btn btn-danger btnCancelColor me-1">
